exports[`test Fills the a simple slot 1`] = `
<div>
  <div>
    <div>
      <button>
        Home 1
      </button>
    </div>
  </div>
</div>
`;

exports[`test Fills the appropriate slot 1`] = `
<div>
  <div>
    <div>
      <button>
        Home 2
      </button>
      <button>
        About
      </button>
    </div>
  </div>
  <div>
    <div>
      <a
        href="twitter.com/reactjs">
        Twitter
      </a>
    </div>
  </div>
  <div />
</div>
`;

exports[`test Replaces the contents of the slot with the matching fill when the slot's \`name\` property changes 1`] = `
<div>
  <div>
    <div>
      <span>
        Home 1
      </span>
    </div>
  </div>
  <div>
    ,
    ,
  </div>
</div>
`;
